[package]
name = "subar"
version = "0.1.0"
authors = ["sublipri"]
edition = "2021"
license = "GPL-3.0-only"
description = "A basic status bar for sway/i3wm"
repository = "https://github.com/sublipri/subar"
keywords = ["statusbar", "sway", "swaywm", "i3", "i3wm"]
readme = "README.md"

[dependencies]
anyhow = "1.0.75"
mpd_client = { version = "1.3.0", features = ["chrono"] }
tokio = { version = "1.33.0", features = ["full"] }
chrono = "0.4.31"
unicode-segmentation = "1.10.1"
serde_json = "1.0.108"
serde = { version = "1.0.193", features = ["derive"] }

[profile.release]
opt-level = 3
strip = true
lto = true
